[package]
name = "bitcoinfee-ml"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.18"
bitcoin = { version = "^0.27", features = [ "use-serde" ] }
bitcoin-fee-model = { git = "https://github.com/afilini/bitcoin-fee-model.git", branch = "temp-bitcoinfee-ml", features = [ "use-bitcoin" ] }
anyhow = "1.0"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
